# tankrs

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  build.rs  package.json
.github/: pull_request_template.md
.github/workflows/: main.yml
client/: .gitignore  .prettierignore  Makefile  README.md  angular.json  app.html  karma.conf.js  package-lock.json  package.json  prettier.config.js  tsconfig.json  tslint.json
client/app/: app.css  app.html
client/e2e/src/: app.e2e-spec.ts
client/js/: app.js
client/src/: app.js  app.ts  index.html  styles.scss
client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  game.service.ts
client/src/app/game/: game.component.html  game.component.spec.ts  game.component.ts
client/src/app/game-display/: game-display.component.html  game-display.component.scss  game-display.component.spec.ts  game-display.component.ts
client/src/app/landing-page/: landing-page.component.html  landing-page.component.scss  landing-page.component.spec.ts  landing-page.component.ts
client/src/environments/: environment.prod.ts  environment.ts
client/src/flatschema/: actions_generated.ts  math_generated.ts  messages_generated.ts  world_generated.ts
examples/: client.rs
old_client/: .gitignore
schema/: .gitignore  action.proto  actions.fbs  build.rs  client_message.proto  geometry.proto  heartbeat.proto  math.fbs  message.fbs  messages.fbs  schema.rs  server_message.proto  tank.proto  world.fbs  world.proto  world_generated.rs
schema/rust/: Cargo.toml  build.rs
schema/rust/src/: lib.rs
server/: .gitignore  Cargo.toml  build.rs
server/protos/: world.proto
server/src/: lib.rs  listener.rs  main.rs  math.rs  publisher.rs  serialization.rs  serialize.rs  world.rs
server/src/protos/: .gitignore
src/: lib.rs
www/: index.js  package-lock.json  package.json
