[package]
name = "tankrs"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>", "michael luo <mluogh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "client"
path = "server/src/client.rs"

[dependencies]
schema = { path = "schema/rust" }
flatbuffers = "0.6.1"
tungstenite = "0.10.1"
url = "2.1.1"

