[package]
name = "tankrs"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>", "michael luo <mluogh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "server/src/main.rs"

[[example]]
name = "client"

[dependencies]
schema = { path = "schema/rust" }
flatbuffers = "0.6.1"
tungstenite = "0.10.1"
futures = "0.3.5"
async-tungstenite = { version = "0.4.2", features = ["async-std-runtime"] }
async-std = { version = "1.5.0", features = ["attributes"] }
anyhow = "1.0.28"
log = "0.4"
env_logger = "0.7.1"

[dev-dependencies]
url = "2.1.1"

