[package]
name = "tankrs"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>", "michael luo <mluogh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "server/src/main.rs"

[[example]]
name = "client"

[dependencies]
anyhow = "1.0.28"
auto_ops = "0.1.0"
async-std = { version = "1.5.0", features = ["attributes"] }
async-tungstenite = { version = "0.4.2", features = ["async-std-runtime"] }
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4"
protobuf = "2"
rand = "0.7.3"
tungstenite = "0.10.1"
uuid = { version = "0.8.0", features = ["v4"] }

schema = { path = "schema/rust" }

[dev-dependencies]
url = "2.1.1"

