[package]
name = "tankrs"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>", "michael luo <mluogh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.14.0"

[build-dependencies]
protoc-rust = "2.0"