[package]
name = "schema"
version = "0.1.0"
authors = ["mluogh <mluogh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"

[build-dependencies]
anyhow = "1.0.31"
glob = "0.3.0"
protobuf-codegen-pure = "2.3"
